[package]
name = "moderator"
description = "A very experimental crate for mod support in Bevy Game Engine games"
version = "0.0.1"
edition = "2021"

authors = ["Dejaime de Oliveira <contact@dejai.me>"]
homepage = "https://dejai.me/moderator"
license = "MIT OR Apache-2.0"

readme = "README.md"

categories = ["game-engines", "api-bindings", "game-development"]
keywords = ["bevy", "gamedev", "mod", "modding"]
repository = "https://github.com/dejaime/moderator"

# ---------------------------------------------------------------- #

[dependencies]
# I will soon be using the `main` branch (currently resolving to 0.9.0-dev) until I've got something useful.
bevy = {  git = "https://github.com/bevyengine/bevy" } 
